--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
     path: packages/calculator
 
 dev_dependencies:
-  flutter_driver:
-    sdk: flutter
+  # flutter_driver:
+  #   sdk: flutter
   flutter_test:
     sdk: flutter
   build_runner: ^1.11.0
